# ai-research

./: .env.example  pyproject.toml
src/ai_research/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py
src/ai_research/services/: get_weather.py
src/app/agents/building-blocks/: 1-intelligence.py  2-memory.py  3-tools.py  4-validation.py  5-control.py  6-recovery.py  7-feedback.py
src/app/core/: config.py
tests/unit/: test_db.py
tests/unit/api/v1/: test_user.py
